...
          }
        },
        tabBarLabel:
          route.name === "home"
            ? "Home"
            : route.name === "favorites"
            ? "Favoritos"
            : route.name === "categories"
            ? "Categorias"
            : "Perfil",
        tabBarIcon: ({ color, size = 22 }) => {
          const iconName =
            route.name === "home"
              ? "home"
              : route.name === "favorites"
...
