...
  "categories-designer": require("../../../assets/images/categories-designer.jpg"),
  "categories-desapego": require("../../../assets/images/categories-desapego.jpg"),
  "categories-geral": require("../../../assets/images/categories-geral.jpg")
};

const categoryNameMap: Record<string, string> = {
  brecho_de_casa: "Brechó de Casa",
  brecho_masculino: "Brechó Masculino",
  brecho_feminino: "Brechó Feminino",
  brecho_infantil: "Brechó Infantil",
  brecho_de_luxo: "Brechó de Luxo",
  brecho_de_designer: "Brechó de Designer",
  brecho_de_desapego: "Brechó de Desapego",
...
